# DiVine2

./: AUTHORS  ChangeLog  INSTALL  README  meson.build
include/: divine.h  meson.build
inputdrivers/divine/: divine.c  meson.build
src/: core_divine.c  core_divine.h  coretypes_divine.h  divine.c  idivine.c  idivine.h  meson.build
